backend.log
  File "/Users/thegods/intelligent-field-assignment/backend_server.py", line 1705
    except Exception as e:
                          ^
IndentationError: unindent does not match any outer indentation level
